<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <Button
            android:id="@+id/go"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/mybutton"
            android:text="@string/go"
            android:textSize="22sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@android:color/holo_blue_light"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/teamA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="60dp"
                    android:text="@string/teamA"
                    android:textColor="@android:color/white"
                    android:textSize="72sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/teamAName"
                    android:layout_width="230dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:hint="@string/wnta"
                    android:inputType="text"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    tools:ignore="LabelFor" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@android:color/holo_red_light"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/teamB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="60dp"
                    android:text="@string/teamB"
                    android:textColor="@android:color/white"
                    android:textSize="72sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/teamBName"
                    android:layout_width="230dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:hint="@string/wntb"
                    android:inputType="text"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    tools:ignore="LabelFor" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>