<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="vertical">

        <LinearLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:context=".MainActivity">

                <TextView
                    android:id="@+id/A"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_horizontal"
                    android:text="@string/team_a"
                    android:textColor="#616161"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:ignore="UnusedAttribute" />

                <TextView
                    android:id="@+id/score_A"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_horizontal"
                    android:textColor="#000000"
                    android:textSize="56sp"
                    android:textStyle="bold"
                    tools:targetApi="jelly_bean" />

                <Button
                    android:id="@+id/goalA"
                    android:layout_width="88dp"
                    android:layout_height="88dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    android:background="@drawable/goal"
                    android:onClick="goalA" />

                <Button
                    android:id="@+id/yellowA"
                    android:layout_width="88dp"
                    android:layout_height="88dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    android:background="@drawable/yellow_card" />

                <Button
                    android:id="@+id/redA"
                    android:layout_width="88dp"
                    android:layout_height="88dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    android:background="@drawable/red_card" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:context=".MainActivity">

                <TextView
                    android:id="@+id/B"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_horizontal"
                    android:text="@string/team_b"
                    android:textColor="#616161"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:ignore="UnusedAttribute" />

                <TextView
                    android:id="@+id/score_B"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_horizontal"
                    android:textColor="#000000"
                    android:textSize="56sp"
                    android:textStyle="bold"
                    tools:ignore="UnusedAttribute" />

                <Button
                    android:id="@+id/goalB"
                    android:layout_width="88dp"
                    android:layout_height="88dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    android:background="@drawable/goal"
                    android:onClick="goalB" />

                <Button
                    android:id="@+id/yellowB"
                    android:layout_width="88dp"
                    android:layout_height="88dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    android:background="@drawable/yellow_card" />

                <Button
                    android:id="@+id/redB"
                    android:layout_width="88dp"
                    android:layout_height="88dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    android:background="@drawable/red_card" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center">

            <Button
                android:id="@+id/reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="reset"
                android:text="@string/reset"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/stat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/stat"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="25dp"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>